@startuml

title __CONTROLLER's Class Diagram__\n

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.ClienteController {
        + ClienteController()
        + cancelarAction()
        + getContaSessao()
        + menuDepositoAction()
        + menuExtratos()
        + menuSaqueAction()
        + menuTransferenciaAction()
        + retornarMenuAction()
    }
  }
  

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.DepositoController {
        + DepositoController()
        + contaPropriaAction()
        + iniciarDeposito()
        + numeroContaAction()
        + outraContaAction()
        + realizarDepositoAction()
        - depositoNaoRealizado()
        - depositoRealizado()
        - realizarDeposito()
        - realizarDeposito()
        - validacaoErro()
    }
  }
  

  namespace br.com.bancoms.controller {
    enum EDepositoController {
      CONTA_PROPRIA
      OUTRA_CONTA
      value
    }
  }
  

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.ExtratoController {
        + ExtratoController()
        + cancelarAction()
        + consultarExtratoAction()
        + detalhesMovimentoAction()
        + getSaldoDiferencial()
        + getSaldoSemDiferencial()
        + iniciarExtratos()
        - adicionarMovimentosView()
        - consultarExtratos()
        - getMovimentoDTO()
        - getMovimentoDTOSaldo()
    }
  }
  

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.LoginController {
        + LoginController()
        + handle()
        - iniciarClienteView()
        - realizarLogin()
        - removerLoginView()
    }
  }
  

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.SaqueController {
        + SaqueController()
        + cancelarAction()
        + iniciarSaque()
        + realizarSaqueAction()
        - realizarSaque()
        - saqueNaoRealizado()
        - saqueRealizado()
        - validacaoErro()
    }
  }
  

  namespace br.com.bancoms.controller {
    class br.com.bancoms.controller.TransferenciaController {
        - numeroConta : int
        + TransferenciaController()
        + actionNumeroConta()
        + actionTransferir()
        + iniciarTransferencia()
        - depositoNaoRealizado()
        - realizarTransferencia()
        - transferenciaRealizada()
        - validacaoErro()
    }
  }
  

  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.model.Cliente : clienteSessao
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.view.MainView : view
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.view.ClienteView : viewClient
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.model.contas.Conta : contaSessao
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.controller.DepositoController : depositoController
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.controller.ExtratoController : extratoController
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.controller.SaqueController : saqueController
  br.com.bancoms.controller.ClienteController o-- br.com.bancoms.controller.TransferenciaController : transferenciaController
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.controller.ClienteController : clienteController
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.service.ContaService : contaService
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.view.DepositoView : depositoView
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.service.MovimentoService : movimentoService
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.controller.DepositoController.EDepositoController : opcaoTipoDepositoEscolhido
  br.com.bancoms.controller.DepositoController o-- br.com.bancoms.components.tecladoComponent.TecladoAdapter : tecladoAdapter
  br.com.bancoms.controller.DepositoController +-down- br.com.bancoms.controller.DepositoController.EDepositoController
  br.com.bancoms.controller.ExtratoController o-- br.com.bancoms.controller.ClienteController : clienteController
  br.com.bancoms.controller.ExtratoController o-- br.com.bancoms.service.ClienteService : clienteService
  br.com.bancoms.controller.ExtratoController o-- br.com.bancoms.view.ExtratoView : extratoView
  br.com.bancoms.controller.ExtratoController o-- br.com.bancoms.service.MovimentoService : movimentoService
  br.com.bancoms.controller.LoginController .up.|> javafx.event.EventHandler
  br.com.bancoms.controller.LoginController o-- br.com.bancoms.service.ClienteService : clienteService
  br.com.bancoms.controller.LoginController o-- br.com.bancoms.service.ContaService : contaService
  br.com.bancoms.controller.LoginController o-- br.com.bancoms.view.LoginView : loginView
  br.com.bancoms.controller.LoginController o-- br.com.bancoms.view.MainView : view
  br.com.bancoms.controller.SaqueController o-- br.com.bancoms.controller.ClienteController : clienteController
  br.com.bancoms.controller.SaqueController o-- br.com.bancoms.service.ContaService : contaService
  br.com.bancoms.controller.SaqueController o-- br.com.bancoms.service.MovimentoService : movimentoService
  br.com.bancoms.controller.SaqueController o-- br.com.bancoms.view.SaqueView : saqueView
  br.com.bancoms.controller.SaqueController o-- br.com.bancoms.components.tecladoComponent.TecladoAdapter : tecladoAdapter
  br.com.bancoms.controller.TransferenciaController o-- br.com.bancoms.controller.ClienteController : clienteController
  br.com.bancoms.controller.TransferenciaController o-- br.com.bancoms.service.ContaService : contaService
  br.com.bancoms.controller.TransferenciaController o-- br.com.bancoms.service.MovimentoService : movimentoService
  br.com.bancoms.controller.TransferenciaController o-- br.com.bancoms.components.tecladoComponent.TecladoAdapter : tecladoAdapter
  br.com.bancoms.controller.TransferenciaController o-- br.com.bancoms.view.TransferenciaView : transferenciaView


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
